Updated readme and env.testing

--- a/.env.testing
+++ b/.env.testing
@@ -1,6 +1,6 @@
 APP_NAME="Simple Blog"
 APP_ENV=testing
-APP_KEY=base64:SWhn26vqWRPLChxQ6vXCaxX3wVvK6i+6xk80fFD7Ucs=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,7 +9,6 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
 DB_DATABASE=storage/test.sqlite
-
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=array
